--- a/index.html
+++ b/index.html
@@ -5,22 +5,25 @@
     <title>Todo List Project</title>
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <script src="https://use.fontawesome.com/484951fd24.js"></script>
     <script src="js/out.js" type="text/javascript"></script>
 </head>
 <body>
 
     <div class="container-fluid bgr">
+
       <div class="row headercolor">
         <div class=".col-md-12 header">
         <h1>The To-Do List</h1>
         </div>
       </div>
 
-      <div class=".col-md-12 main">
+      <div class=".col-md-12 main mainheight">
 
         <div class="row">
 
-        <div class="col-md-4 flexy-center">
+        <div class="col-md-4 flexy-center pdgtopselect">
             <div class="col-md-4 panel panel-default mrgtop wide">
               <div class="panel-heading text-center">
                 Work
@@ -33,7 +36,7 @@
 
           </div>
 
-          <div class="col-md-4 flexy-center">
+          <div class="col-md-4 flexy-center pdgtopselect">
             <div class="col-md-4 panel panel-default mrgtop wide">
                 <div class="panel-heading text-center">
                     Education
@@ -45,7 +48,7 @@
             </div>
             </div>
 
-            <div class="col-md-4 flexy-center">
+            <div class="col-md-4 flexy-center pdgtopselect">
             <div class="col-md-4 category panel panel-default mrgtop wide">
                 <div class="panel-heading textcenter">
                     Exercise
@@ -63,7 +66,7 @@
             <div class="row flexy-space-ar">
 
         <div class="col-md-4 flexy-center">
-          <div class="col-md-4 category panel panel-default wide">
+          <div class="col-md-4 category panel panel-default wide mrgtop">
             <div class="panel-heading textcenter">
               Household duties
               <i class="glyphicon glyphicon-home"></i>
@@ -75,7 +78,7 @@
           </div>
 
           <div class="col-md-4 flexy-center">
-          <div class="col-md-4 category panel panel-default wide">
+          <div class="col-md-4 category panel panel-default wide mrgtop">
             <div class="panel-heading textcenter">
                 Other
                 <i class="glyphicon glyphicon-sunglasses"></i>
@@ -88,43 +91,50 @@
 
           </div>
 
-        <div class="row flexy-center seccolor whitebor">
-          <div class="col-md-6 form-group textcenter helpborder margin">
-            <h1 class="pdg activity">Add new activity</h1>
           </div>
-        </div>
 
-          <div class="row seccolor flexy-center">
-            <div class="col-md-6 flexy-space-ar textcenter">
-              <label class="pdg helpborder activity">Category</label>
-                <label class="pdg helpborder activity">Type description here</label>
+
+              <div class="row seccolor">
+              <div class="col-md-12 seccolor helpborder help">
+            <div class="row flexy-center seccolor whitebor">
+              <div class="col-md-6 form-group textcenter helpborder margin">
+                <h1 class="activity">Add new activity</h1>
               </div>
             </div>
 
-            <div class="row seccolor flexy-center">
-              <div class="col-md-6 flexy-center">
-                <select class="form-control mrg" id="categories">
-                  <option value="choose">Choose category</option>
-                  <option value= "work">Work</option>
-                  <option value="education">Education</option>
-                  <option value="exercise">Exercise</option>
-                  <option value="household">Household Duties</option>
-                  <option value="other">Other</option>
-                </select>
-
-                <input class="todo mrg" type="text" placeholder="To do..." id="taskcontent"></input>
-
+              <div class="row seccolor flexy-center">
+                <div class="col-md-6 flexy-space-ar textcenter">
+                  <label class="pdg helpborder activity">Category</label>
+                    <label class="pdg helpborder activity">Type description here</label>
+                  </div>
                 </div>
-            </div>
 
-          <div class="row seccolor flexy-center">
-            <div class="col-md-6 flexy-vertical-center flexy-align helpborder">
-                <button type="button" class="btn btn-info mrg btnsize" id="add">Add task</button>
-                <button type="button" class="btn btn-danger mrg btnsize" id="delete">Delete completed tasks</button>
-            </div>
-          </div>
+                <div class="row seccolor flexy-center">
+                  <div class="col-md-6 flexy-center">
+                    <select class="form-control mrg" id="categories">
+                      <option value="choose">Choose category</option>
+                      <option value= "work">Work</option>
+                      <option value="education">Education</option>
+                      <option value="exercise">Exercise</option>
+                      <option value="household">Household Duties</option>
+                      <option value="other">Other</option>
+                    </select>
 
+                    <input class="todo mrg" type="text" placeholder="To do..." id="taskcontent"></input>
+
+                    </div>
+                </div>
+
+              <div class="row seccolor flexy-center pgdtwo">
+                <div class="col-md-6 flexy-vertical-center flexy-align helpborder">
+                    <button type="button" class="btn btn_active mrg btnsize" id="add">Add task <i class="fa fa-plus" aria-hidden="true"></i> </button>
+                    <button type="button" class="btn btn_active mrg btnsize" id="delete">Delete completed tasks <i class="fa fa-trash" aria-hidden="true"></i> </button>
+                </div>
               </div>
+              </div>
+              </div>
+
+<!-- koniec kontenera -->
           </div>
 
 
