--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
 
       <div class="row headercolor">
-        <div class=".col-md-12 header">
+        <div class=".col-md-12 header navheight">
         <h1>The To-Do List</h1>
         </div>
       </div>
@@ -120,7 +120,7 @@
 
 
               <div class="row seccolor">
-              <div class="col-md-12 seccolor helpborder help">
+              <div class="col-md-12 seccolor menuheight">
             <div class="row flexy-center seccolor whitebor">
               <div class="col-md-6 form-group textcenter helpborder margin">
                 <h1 class="activity">Add new activity</h1>
