--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="pl-PL">
 <head>
     <meta charset="UTF-8">
-    <meta name="vievport" content="width: device-width, initial-scale=1"></meta>
+    <meta name="viewport" content="width=device-width, initial-scale=1"></meta>
     <title>Todo List Project</title>
     <link href="bootstrap-3.3.7-dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/style.css">
